--- a/client/views/app/organization-structure/location-list-item/area-list-item/area-settings/user-popup/user-popup.html
+++ b/client/views/app/organization-structure/location-list-item/area-list-item/area-settings/user-popup/user-popup.html
@@ -19,7 +19,7 @@
             <div class="col-xs-10">
               <button data-toggle="dropdown"
                       class="btn btn-white dropdown-toggle form-control text-capitalize
-                      {{#unless isManager}}disabled{{/unless}}">
+                      {{#unless hasPermissionInAreaTo 'edit areas'}}disabled{{/unless}}">
                 {{userRole}}
               </button>
               <span class="caret caret-pulled-right pull-right"></span>
@@ -35,7 +35,7 @@
               <a href="/user/profile/{{userId}}">View User Profile</a>
             </div>
           </div>
-          {{#if isManager}}
+          {{#if hasPermissionInAreaTo 'edit areas'}}
             <div class="row">
               <div class="col-xs-12">
                 <a class="remove-user-from-area" href="#">Remove From Area</a>
