--- a/client/views/app/meetings/meetings.less
+++ b/client/views/app/meetings/meetings.less
@@ -25,3 +25,15 @@
     }
   }
 }
+
+.meeting-attendees {
+  position: relative;
+  display: inline-block;
+
+  .attendee-status {
+    font-size: 10px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
