--- a/client/views/app/calendar/manager-calendar/manager-calendar.html
+++ b/client/views/app/calendar/manager-calendar/manager-calendar.html
@@ -2,7 +2,7 @@
   {{> calendarHeader date=date type="day" isManagerCalendar=true userId=123}}
 
   <div class="col-md-3">
-    <div class="items-palette job-items-palette">
+    <div class="items-palette job-items-palette m-t-sm">
       {{> itemsPalette type='prep job'}}
     </div>
 
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="calendar-container text-center col-md-9">
+  <div class="calendar-container m-t-sm text-center col-md-9">
     {{#if users.length}}
       {{> calendarItem resources=users date=date type="day"}}
     {{else}}
