very quick style fix

--- a/client/views/app/calendar/manager-calendar/manager-calendar.html
+++ b/client/views/app/calendar/manager-calendar/manager-calendar.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="calendar-container m-t-sm text-center col-md-9">
+  <div class="calendar-container text-center col-md-9 m-t-sm">
     {{#if users.length}}
       {{> calendarItem resources=users date=date type="day"}}
     {{else}}
