--- a/client/views/app/calendar/user-calendar/user-calendar.html
+++ b/client/views/app/calendar/user-calendar/user-calendar.html
@@ -1,11 +1,11 @@
 <template name="userCalendar">
   {{> calendarHeader date=date type=type isManagerCalendar=false userId=userId}}
 
-  <div class="items-palette tasks-items-palette col-md-3">
+  <div class="items-palette tasks-items-palette col-md-3 m-t-sm">
     {{> itemsPalette type='task'  calendarType=type}}
   </div>
 
-  <div class="calendar-container col-md-9 text-center">
+  <div class="calendar-container col-md-9 text-center m-t-sm">
     {{> calendarItem userId=userId date=date type=type}}
   </div>
 </template>
