--- a/client/views/app/projects/project-details/project-details.html
+++ b/client/views/app/projects/project-details/project-details.html
@@ -1,3 +1,21 @@
 <template name="projectDetails">
-	
+  {{#if createMode}}
+    {{> pageHeading title='Create Project' category='Projects'}}
+  {{else}}
+    {{> pageHeading title='Project' category='Projects'}}
+  {{/if}}
+
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="wrapper wrapper-content fadeInUp">
+        <div class="ibox">
+          <div class="ibox float-e-margins">
+            {{#collapsibleElement settings=meetingDetailsOptions}}
+              {{> projectCreateEdit createMode=createMode id=id}}
+            {{/collapsibleElement}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
