--- a/client/views/app/projects/projects-list/header/projects-list-header.html
+++ b/client/views/app/projects/projects-list/header/projects-list-header.html
@@ -1,10 +1,10 @@
 <template name="projectsListHeader">
   <div class="title-action">
     {{#if hasPermissionInAreaTo "edit projects"}}
-      <button class="btn btn-primary create-new-project">
+      <a href="{{pathFor route='createProject'}}" class="btn btn-primary">
         <i class="fa fa-plus"></i>
         Project
-      </button>
+      </a>
     {{/if}}
   </div>
 </template>
